--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <title>Multichain DApp</title>
+
+    <!-- AppKit CSS for button styling -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@reown/appkit/dist/appkit.css" />
+
+    <!-- Optional meta for responsive layout -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <!-- React mount point -->
     <div id="root"></div>
 
-    <!-- Optional inline fallback button -->
+    <!-- Optional inline AppKit button fallback (React will handle main button) -->
     <appkit-button style="position: fixed; top: 20px; right: 20px; z-index: 9999;"></appkit-button>
 
-    <!-- React entry -->
+    <!-- React entry point -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
